Adding robots.txt and favicon

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ By using this software, you agree to these terms. For commercial use inquiries, 
 <head>
   <meta charset="UTF-8" />
   <title>US Equity Comp Fun for UK workers. E*Trade Handler & CGT Calculator</title>
+  <link rel="icon" href="favicon.png" type="image/png">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
   <style>
     /* Cyberpunk colors */
