Change python script links to blank target

--- a/index.html
+++ b/index.html
@@ -1749,9 +1749,9 @@ By using this software, you agree to these terms. For commercial use inquiries, 
         <li>You'll want your companies Stock Price History: Because correlating the vesting value to a vest is
           apparently too hard to put in the benefit history, and can't be matched easily from the gains and
           losses....E*Trade thinks you need a treasure hunt. So I've included <a href="stock_price_downloader.py"
-            download>this Python Script</a>. Fun times.</li>
-        <li>Finally we need <a href="gbpusdyahoo.py" download>an average daily price GBP/USD data grabber</a> and a <a
-            href="holiday_downloader.py" download>US Holidays Downloader</a>. Because we aren't in the US, and things
+          target="_blank">this Python Script</a>. Fun times.</li>
+        <li>Finally we need <a href="gbpusdyahoo.py" target="_blank">an average daily price GBP/USD data grabber</a> and a <a
+            href="holiday_downloader.py" target="_blank">US Holidays Downloader</a>. Because we aren't in the US, and things
           get complicated when E*Trade marks the vest date as a date that the stock can't actually vest on. They are on
           it, aren't they?</li>
       </ul>
@@ -1878,10 +1878,11 @@ By using this software, you agree to these terms. For commercial use inquiries, 
             <strong>Stock Price and Other Supporting Data</strong><br />
             Obtain the following additional resources to support calculations:
             <ul>
-              <li><strong>Historical Stock Price Data</strong>: Required for tax basis calculations.</li>
-              <li><strong>Currency Data</strong>: Use this <a href="stock_price_downloader.py" download>Python
+              <li><strong>Historical Stock Price Data</strong>: Required for tax basis calculations <a href="stock_price_downloader.py"
+                target="_blank">via Python Script</a></li>
+              <li><strong>Currency Data</strong>: Use this <a href="gbpusdyahoo.py" target="_blank">Python
                   Script</a> to fetch GBP/USD daily averages.</li>
-              <li><strong>US Holiday Calendar</strong>: This <a href="holiday_downloader.py" download>Python script</a>
+              <li><strong>US Holiday Calendar</strong>: This <a href="holiday_downloader.py" target="_blank">Python script</a>
                 ensures date adjustments align with market closures.</li>
             </ul>
           </li>
